Fix: `table-sm` for Bootstrap 4 and 5 could result in header text overlapping the ordering icons
https://datatables.net/forums/discussion/78174

--- a/css/dataTables.bootstrap4.scss
+++ b/css/dataTables.bootstrap4.scss
@@ -164,23 +164,22 @@ div.dt-scroll-foot {
 //
 
 // Condensed
-table.dataTable.table-sm {
-	> thead > tr > th:not(.sorting_disabled){
-		padding-right: 20px;
-	}
+table.dataTable.table-sm > thead > tr {
+	th,
+	td {
+		&.dt-orderable-asc,
+		&.dt-orderable-desc,
+		&.dt-ordering-asc,
+		&.dt-ordering-desc {
+			padding-right: 20px;
 
-	&.dt-orderable-asc,
-	&.dt-orderable-desc {
-		&:before {
-			top: 5px;
-			right: 0.85em;
-		}
-
-		&:after {
-			top: 5px;
+			span.dt-column-order {
+				right: 5px;
+			}
 		}
 	}
 }
+
 
 // Bordered table
 div.dt-scroll-head table.table-bordered {
